--- a/custom_components/clockwork/manifest.json
+++ b/custom_components/clockwork/manifest.json
@@ -10,5 +10,10 @@
   "issue_tracker": "https://github.com/mutilator/clockwork/issues",
   "quality_scale": "silver",
   "requirements": [],
-  "version": "0.1.2"
+  "version": "1.1.0",
+  "automation": {
+    "condition": [
+      "timespan"
+    ]
+  }
 }
