--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -2,3 +2,5 @@ pytest>=7.0.0
 pytest-cov>=4.0.0
 pytest-asyncio>=0.21.0
 homeassistant>=2023.12.0
+pytest-mock>=3.10.0
+pytest-homeassistant-custom-component>=0.1.0
